deps/jansson/test/suites/invalid/unterminated-array-and-object/error.normal
2 0 3
string or '}' expected near end of file
